force-app/main/default/objects/Lecture__c/fields/Abstract__c.field-meta.xml
<CustomField>
    <fullName>Abstract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Abstract</label>
    <referenceTo>Abstract__c</referenceTo>
    <relationshipLabel>Lectures</relationshipLabel>
    <relationshipName>Lectures</relationshipName>
    <type>Lookup</type>
</CustomField>