force-app/main/default/objects/Lecture__c/fields/Abstract_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Abstract_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abstract Submitted</label>
    <type>Checkbox</type>
</CustomField>