force-app/main/default/objects/Lecture__c/fields/Author_Information__c.field-meta.xml
<CustomField>
    <fullName>Author_Information__c</fullName>
    <label>Information from author</label>
    <type>TextArea</type>
</CustomField>