force-app/main/default/objects/Lecture__c/fields/Lecture_End__c.field-meta.xml
<CustomField>
    <fullName>Lecture_End__c</fullName>
    <label>Lecture End</label>
    <type>DateTime</type>
</CustomField>