force-app/main/default/objects/Lecture__c/fields/Lecture_Location__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Location__c</fullName>
    <label>Lecture Location</label>
    <length>120</length>
    <type>Text</type>
</CustomField>