force-app/main/default/objects/Lecture__c/fields/Lecture_Number__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Number__c</fullName>
    <label>Lecture Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>