force-app/main/default/objects/Lecture__c/fields/Lecture_Start__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Start__c</fullName>
    <label>Lecture Start</label>
    <type>DateTime</type>
</CustomField>