force-app/main/default/objects/Lecture__c/fields/Lecture_Title__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Title__c</fullName>
    <label>Lecture Title</label>
    <length>240</length>
    <type>Text</type>
</CustomField>