force-app/main/default/objects/Lecture__c/fields/Lecture_Type__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Type__c</fullName>
    <label>Lecture Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lecture</fullName>
            </value>
            <value>
                <fullName>Forum Talk</fullName>
            </value>
            <value>
                <fullName>Scientific Theatre talk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>