force-app/main/default/objects/Lecture__c/fields/Presentation_Number__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Number__c</fullName>
    <label>Presentation Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>