force-app/main/default/objects/Lecture__c/fields/Presentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Type__c</fullName>
    <label>Presentation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>oral invited</fullName>
            </value>
            <value>
                <fullName>eposter</fullName>
            </value>
            <value>
                <fullName>oral industry</fullName>
            </value>
            <value>
                <fullName>epresentation</fullName>
            </value>
            <value>
                <fullName>poster on demand</fullName>
            </value>
            <value>
                <fullName>oral abstract</fullName>
            </value>
            <value>
                <fullName>live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>