force-app/main/default/objects/Lecture__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Lectures</relationshipLabel>
    <relationshipName>Lectures</relationshipName>
    <type>Lookup</type>
</CustomField>