force-app/main/default/objects/Lecture__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lecture_Title__c</columns>
    <columns>Lecture_Type__c</columns>
    <columns>Abstract__c</columns>
    <columns>Session__c</columns>
    <columns>Event_custom__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>