force-app/main/default/objects/Lecture__c/listViews/Missing_Abstracts.listView-meta.xml
<ListView>
    <fullName>Missing_Abstracts</fullName>
    <columns>NAME</columns>
    <columns>Lecture_Title__c</columns>
    <columns>Lecture_Type__c</columns>
    <columns>Abstract__c</columns>
    <columns>Session__c</columns>
    <columns>Event_custom__c</columns>
    <columns>Abstract_Submitted__c</columns>
    <columns>Submission_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Abstract__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Abstract_Submitted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Missing Abstracts</label>
</ListView>